<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="weather_something">Weather Something</string>
    <string name="unknown">Unknown</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="lat_lon_values">Lat: %s\nLon: %s</string>
    <string name="error_value">Error: %s</string>

    <string name="auto_refresh">Auto Refresh</string>
    <string name="coordinates_are">Coordinates:</string>
    <string name="temperature_is">Temperature:</string>
    <string name="date_is">Date:</string>
    <string name="more_details">More Details</string>

    <string name="delete_item_confirmation">Are you sure you want to delete the entry?</string>
    <string name="update_item_confirmation">Are you sure you want to update the entry?</string>
    <string name="error_invalid_input">Invalid Input!</string>

    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="temperature">Temperature</string>

    <string name="coord">coord</string>
    <string name="lat">Lat</string>
    <string name="lon">Lon</string>
    <string name="base">base</string>
    <string name="main">main</string>
    <string name="temp">temp</string>
    <string name="feelsLike">feelsLike</string>
    <string name="temp_min">temp_min</string>
    <string name="temp_max">tempMax</string>
    <string name="pressure">pressure</string>
    <string name="humidity">humidity</string>
    <string name="visibility">visibility</string>
    <string name="wind">wind</string>
    <string name="speed">speed</string>
    <string name="deg">deg</string>
    <string name="gust">gust</string>
    <string name="vloud">cloud</string>
    <string name="all">all</string>
    <string name="rain">rain</string>
    <string name="one_hour">1h</string>
    <string name="three_hour">3h</string>
    <string name="snow">snow</string>
    <string name="dt">dt</string>
    <string name="sys">sys</string>
    <string name="type">type</string>
    <string name="sysId">sysId</string>
    <string name="message">message</string>
    <string name="county">country</string>
    <string name="sunrise">sunrise</string>
    <string name="sunset">sunset</string>
    <string name="timezone">timezone</string>
    <string name="cityId">cityId</string>
    <string name="name">name</string>
    <string name="code">cod</string>
    <string name="date">date</string>
    <string name="unit">unit</string>
</resources>